--- a/app/index.html
+++ b/app/index.html
@@ -11,12 +11,12 @@
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/emberd.css">
+    <link rel="stylesheet" href="assets/style.css">
+
 
     {{content-for 'head-footer'}}
   </head>
   <body>
-    {{content-for 'body'}}
-
     <script src="assets/vendor.js"></script>
     <script src="assets/emberd.js"></script>
 
